--- a/package.json
+++ b/package.json
@@ -55,6 +55,6 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://github.com/khaledbaniamer/portfolio#readme"
+  "homepage": "https://github.com/khaledbaniamer/portfolio/public"
 
 }
